--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -12,9 +12,26 @@
     <link rel="stylesheet" href="/css/choices.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap-grid.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <style>
+        #my_modal {
+            display: none;
+            width: 300px;
+            padding: 20px 60px;
+            background-color: #fefefe;
+            border: 1px solid #888;
+            border-radius: 3px;
+        }
+
+        #my_modal .modal_close_btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+    </style>
 </head>
 
 <body>
+
 <!--네이게이터-->
 <div class="sidebar">
     <div class="sidebar-header"><a href="#">
@@ -151,6 +168,38 @@
             </div>
         </div>
     </div>
+    <div class="pgn-modal" id="my_modal">
+        <div class="pgn-modal-wrapper">
+            <div class="modal__header">
+                <h5>태그 관리</h5>
+                <div class="toolbox">
+                    <button class="btn-modal-close modal-dismiss"><i class="la la-times"></i></button>
+                </div>
+            </div>
+            <div class="modal__body">
+                <div class="form-group label--floating"><input type="text"
+                                                               id="tag_name"><label>태그명</label>
+                </div>
+                <div class="box-body pt-0 px-0 responsive">
+                    <table id="tag_menage">
+                        <thead>
+                        <tr>
+                            <th>태그명</th>
+                            <th>등록날짜</th>
+                            <th>삭제</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="modal__footer">
+                <button class="btn btn-ghost modal-dismiss">취소</button>
+                <button class="btn btn-primary pull-right" id="tag_reg">등록</button>
+            </div>
+        </div>
+    </div>
 
 </div>
 <script src="/js/main.js"></script>
@@ -179,12 +228,14 @@
                         // No, id, 구분, 훈련유형, 첨부파일 정보, 템플릿명, 메일 제목, 발송자명, 다운로드 유형, 등록일
                         // No ,tmp_no , division, kind, file_info, tmp_name, mail_title, sender_name, download_type, created_t
                         for (let i = 0; i < rObj.tmpls.length; i++) {
-                            $('#tmpls > tbody:last').append('<tr>'+'<td>'+rObj.tmpls[i].tmp_no+'</td>'+'<td id="tmpls_' + rObj.tmpls[i].tmp_no +
-                                '" style="visibility:hidden;position:absolute;">' + rObj.tmpls[i].tmp_no + '</td><td><div class="pgn-checkbox"><input type="checkbox" name="">' +
+                            $('#tmpls > tbody:last').append('<tr>' + '<td></td><td>' + rObj.tmpls[i].tmp_no + '</td>' +
+                                rObj.tmpls[i].tmp_no + '</td><td>' +
+                                '<button class="btn btn-secondary mr-1" id="tmp_modify"' +
+                                ' onclick="modal(my_modal")"><i class="la la-pencil"></i></button>' +
                                 '<span></span></div></td><td>' + rObj.tmpls[i].division + '</td><td>' + rObj.tmpls[i].kind + '</td><td>' + rObj.tmpls[i].file_info +
                                 '</td><td>' + rObj.tmpls[i].tmp_name + '</td><td>' + rObj.tmpls[i].mail_title + '</td><td>' +
-                                rObj.tmpls[i].sender_name + '</td><td>' + rObj.tmpls[i].download_type + '</td><td>'+
-                                '<td>' + rObj.tmpls[i].created_t + '</td></tr>');
+                                rObj.tmpls[i].sender_name + '</td><td>' + rObj.tmpls[i].download_type + '</td>' +
+                                '<td>' + rObj.tmpls[i].created_time + '</td></tr>');
                         }
                     } else {
                         $('#tmpls > tbody:last').append('<tr><td colspan="7"><div class="alert alert">\n' +
@@ -192,36 +243,8 @@
                             '                </div></tr></td>');
                     }
 
-                    paging(rObj.total, page);
+                    // paging(rObj.total, page);
 
-                    if (rObj.tags.length > 0) {
-                        $('#tag_menage > tbody').empty();
-                        $('#tag_select').empty();
-                        for (let j = 0; j < rObj.tags.length; j++) {
-                            $('#tag_menage >tbody:last').append("<tr id='tag_" + rObj.tags[j].tag_no + "'>" +
-                                "                        <td>" + rObj.tags[j].tag_name + "</td>\n" +
-                                "                        <td>" + rObj.tags[j].created_t + "</td>\n" +
-                                "                        <td>\n" +
-                                "                        <button class=\"btn btn-secondary\" onclick='deleteTag(" + rObj.tags[j].tag_no + ")'><i class=\"la la-trash\"></i></button>\n" +
-                                "                        </td>\n" +
-                                "                        </tr>");
-
-                            if (j === 0) {
-                                // const option = ;
-                                console.log(rObj.tags[j].tag_no);
-                                $('#tag_selector').append("<option value='" + rObj.tags[j].tag_no + "' selected>" + rObj.tags[j].tag_name + "</option>");
-                                $('#tag_selector2').append("<option value='" + rObj.tags[j].tag_no + "'>" + rObj.tags[j].tag_name + "</option>");
-                            } else {
-                                $('#tag_selector').append("<option value='" + rObj.tags[j].tag_no + "'>" + rObj.tags[j].tag_name + "</option>");
-                                $('#tag_selector2').append("<option value='" + rObj.tags[j].tag_no + "'>" + rObj.tags[j].tag_name + "</option>");
-                            }
-
-                        }
-                    } else {
-                        $('#tag_menage > tbody:last').append('<tr><td colspan="3"><div class="alert alert">\n' +
-                            '                  <p>Info<span>등록된 태그가 존재하지 않습니다.</span></p>\n' +
-                            '                </div></tr></td>');
-                    }
 
 
                 } else {
