--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:white-space="http://www.w3.org/1999/xhtml">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
 <!--네이게이터-->
 <div class="sidebar">
     <div class="sidebar-header"><a href="#">
@@ -127,29 +126,6 @@
                     <div class="box-header">
                         <h3>템플릿관리</h3>
                     </div>
-                    <div class="toolbox">
-                        <div class="box-body pt-0 px-0 responsive">
-                            <table id="tmpls">
-                                <thead>
-                                <tr>
-                                    <th style="visibility:hidden;position:absolute;"></th>
-                                    <th>No</th>
-                                    <th><i class="la la-pencil-square"></i></th>
-                                    <th>구분</th>
-                                    <th>훈련 유형</th>
-                                    <th>첨부파일 정보</th>
-                                    <th>템플릿명</th>
-                                    <th>메일제목</th>
-                                    <th>발송자명(이메일)</th>
-                                    <th>다운로드 유형</th>
-                                    <th>등록일</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
 
                     <div class="pgn-modal" id="my_modal">
                         <div class="pgn-modal-wrapper ">
@@ -185,21 +161,20 @@
                                     <option value="3">Excel</option>
                                 </select>
                                 </div>
-                                <div class="form-group label--floating"><input type="text"
+                                <div class="form-group"><input type="text"
                                                                                id="sender_name"
                                                                                maxlength="30"></div>
-                                    <!-- <label>발송자</label> -->
-                                <div class="form-group label--floating"><input type="text"
+                                <!-- <label>발송자</label> -->
+                                <div class="form-group"><input type="text"
                                                                                id="title" maxlength="60"></div>
-                                    <!-- <label>메일 제목(최대 30자)</label> -->
-
+                                <!-- <label>메일 제목(최대 30자)</label> -->
 
 
                                 <textarea name="content" id="content"></textarea>
                                 <script>
-                                    CKEDITOR.replace( 'content' );
+                                    CKEDITOR.replace('content');
                                 </script>
-                                <div class="form-group label--floating">
+                                <div class="form-group">
                                     <div style="color: red;font-weight: bold; font-size: small">
                                         {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : 악성메일 훈련 솔루션 IP, {{target_position}}
                                         : 직급, {{targer_orgarnize}} : 조직, {{targer_phone}} : 훈련 대상자의 전화번호
@@ -220,6 +195,31 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="toolbox">
+                        <div class="box-body pt-0 px-0 responsive">
+                            <table id="tmpls">
+                                <thead>
+                                <tr>
+                                    <th style="visibility:hidden;position:absolute;"></th>
+                                    <th>No</th>
+                                    <th><i class="la la-pencil-square"></i></th>
+                                    <th>구분</th>
+                                    <th>훈련 유형</th>
+                                    <th>첨부파일 정보</th>
+                                    <th>템플릿명</th>
+                                    <th>메일제목</th>
+                                    <th>발송자명(이메일)</th>
+                                    <th>다운로드 유형</th>
+                                    <th>등록일</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
 
                     <div class="pagination-wrapper clearfix">
                         <ul class="pagination float--right" id="pages">
@@ -293,9 +293,6 @@
         r.send();
     }
 
-    GetDashBoard();
-    GetTemplates();
-
     function GetTmlDetail(tml_no) {
 
         const r = new XMLHttpRequest();
@@ -360,7 +357,7 @@
         r.onreadystatechange = function () {
             if (r.readyState === 4) {
                 if (r.status === 200) {
-                    alert("프로젝트 생성이 완료되었습니다.")
+                    alert("템플릿 수정 완료했습니다.")
                     location.reload()
                 } else if (r.status === 403) {
                     const tokenResult = Refresh();
@@ -398,6 +395,8 @@
         return this;
     }
 
+    GetDashBoard();
+    GetTemplates();
 </script>
 
 </body>
