--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -351,6 +351,7 @@
         const tmp_division = $('#tmp_division').val();
         const tmp_kind = $('#tmp_kind').val();
         const tmp_name = $('#tmp_name').val();
+        const tmp_no = $('#tmp_no').val();
         const file_info = $('#file_info').val();
         const sender_name = $('#sender_name').val();
         const title = $('#title').val();
@@ -358,9 +359,10 @@
         const download_type = $('#download_type').val();
 
         const formData = {
+            tmp_no: tmp_no,
             tmp_division: tmp_division,
             tmp_kind: tmp_kind,
-            tmp_name : tmp_name,
+            tmp_name: tmp_name,
             file_info: file_info,
             sender_name: sender_name,
             title: title,
@@ -394,8 +396,30 @@
 
     function delTml() {
         const tmp_no = $('#tmp_no').val();
-        console.log(tmp_no)
 
+        const formData = {
+            tmp_no: parseInt(tmp_no),
+        };
+
+        const r = new XMLHttpRequest();
+        r.open('POST', 'http://localhost:5000/setting/delTmp', true);
+        r.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+        r.withCredentials = true;
+        r.onreadystatechange = function () {
+            if (r.readyState === 4) {
+                if (r.status === 200) {
+                    alert("템플릿 삭제 완료했습니다.")
+                    location.reload()
+                } else if (r.status === 403) {
+                    const tokenResult = Refresh();
+                    if (tokenResult) {
+                        delTml();
+                        console.log("true")
+                    }
+                }
+            }
+        };
+        r.send(JSON.stringify(formData));
     }
 
     function OpenModal(i) {
